--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "js-base64": "^3.7.8",
+    "pdf-lib": "^1.17.1",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-blob-util": "^0.23.2",
     "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-pdf": "^7.0.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0"
